Fix center roles pages

--- a/src/app/views/system/asset-table/asset-table.component.html
+++ b/src/app/views/system/asset-table/asset-table.component.html
@@ -87,10 +87,10 @@
                 
                 
                 <!-- Header Row -->
-                <tr mat-header-row *matHeaderRowDef="['Aactions', 'วันเดือนปี', 'รหัสครุภัณฑ์', 'รายการ', 'ราคาต่อหน่วย', 'วิธีการได้มา', 'เลขที่เอกสาร', 'แผนก', 'ที่อยู่', 'ผู้ใช้งาน', 'หมายเหตุ']"></tr>
+                <tr mat-header-row *matHeaderRowDef="['Aactions', 'วันเดือนปี', 'รหัสครุภัณฑ์', 'รายการ', 'ราคาต่อหน่วย', 'วิธีการได้มา', 'เลขที่เอกสาร','หน่วยงาน', 'ฝ่าย', 'ที่อยู่', 'ผู้ใช้งาน', 'หมายเหตุ']"></tr>
         
                 <!-- Data Rows -->
-                <tr mat-row *matRowDef="let row; columns: ['Aactions','วันเดือนปี', 'รหัสครุภัณฑ์', 'รายการ', 'ราคาต่อหน่วย', 'วิธีการได้มา', 'เลขที่เอกสาร', 'แผนก', 'ที่อยู่', 'ผู้ใช้งาน', 'หมายเหตุ'];"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['Aactions','วันเดือนปี', 'รหัสครุภัณฑ์', 'รายการ', 'ราคาต่อหน่วย', 'วิธีการได้มา', 'เลขที่เอกสาร','หน่วยงาน', 'ฝ่าย', 'ที่อยู่', 'ผู้ใช้งาน', 'หมายเหตุ'];"></tr>
             </table>
 
             <!-- Paginator -->
