--- a/src/app/views/system/asset-detail1/system.component.html
+++ b/src/app/views/system/asset-detail1/system.component.html
@@ -65,12 +65,12 @@
     </div>
     <c-card class="mb-4" style="border: none">
       <c-card-body>
-        <c-card class="border shadow-sm" [hidden]="hidden2">
-          <c-card-header>นำเข้ามูลในรูปแบบ Excel</c-card-header>
+        <c-card class=" shadow-sm" [hidden]="hidden2" style="border-style: dotted ;border-width: 3.5px;">
+          <!-- <c-card-header>นำเข้ามูลในรูปแบบ Excel</c-card-header> -->
           <c-card-body>
-            <p>ข้อมูลที่นำเข้าจะต้องมีลักษณะวันเดือนปีแบบนี้เท่านั้นครับ</p>
+            <!-- <p>ข้อมูลที่นำเข้าจะต้องมีลักษณะวันเดือนปีแบบนี้เท่านั้นครับ</p> -->
 
-            <table class="table border">
+            <!-- <table class="table border">
               <thead>
                 <tr>
                   <th>วันเดือนปี</th>
@@ -97,7 +97,7 @@
                   <td></td>
                 </tr>
               </tbody>
-            </table>
+            </table> -->
 
             <form (submit)="onSubmit2()">
               <div class="row">
@@ -117,6 +117,8 @@
             </form>
           </c-card-body>
         </c-card>
+        
+        <br/>
 
         <form cForm [formGroup]="asset" (ngSubmit)="autoInput(); onSubmit()">
           <div class="row row-cols-1 row-cols-sm-3 row-cols-md-3 mb-3">
@@ -136,7 +138,7 @@
                   pattern="\d{3}-\d{4}-\d{2}-\d{4}\(\d\)"
                   type="text"
                   (keypress)="handleKeyPress($event, 'assetNameInput')"
-                  required
+                  readonly
                 />
               </div>
             </div>
