New design & New Chart honey + Mapping

--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -20,7 +20,7 @@
         ></svg>
       </button>
 
-      <c-nav-item *ngIf="userinfo.affiliation === 'กกต.สกล'">
+      <c-nav-item *ngIf="userinfo.affiliation === 'กกต'">
         <a
           cNavLink
           class="anuphan-700"
@@ -30,7 +30,7 @@
         </a>
       </c-nav-item>
 
-      <c-nav-item *ngIf="userinfo.affiliation !== 'กกต.สกล'">
+      <c-nav-item *ngIf="userinfo.affiliation !== 'กกต'">
         <a
           cNavLink
           class="anuphan-700"
