--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,8 +1,14 @@
+<!-- <div class="card shadow-sm " style="width: fit-content;border: none;">
+  <div class="card-body">
+    <h1><span class="anuphan-700 ">ภาพรวมทั้งส่วนกลาง</span></h1>
+    <app-honeycomb  />
+  </div>
+</div><br/> -->
+
 
 <app-widgets-dropdown />
 
 <div class="row">
-
   <div class="col-8">
     <br/>
     <app-tablewiget/>
