--- a/src/app/views/defaultdata/accounts/accounts.component.html
+++ b/src/app/views/defaultdata/accounts/accounts.component.html
@@ -1,9 +1,10 @@
 <!-- defaultdata.component.html -->
-<c-card class="mb-4 shadow-sm" >
-  <c-card-header>
+<c-card class="mb-4 shadow-sm" style="border: none;" >
+  <!-- <c-card-header>
       <strong>กำหนดผังบัญชี</strong>
-  </c-card-header>
+  </c-card-header> -->
     <c-card-body>
+      <h1><span class="anuphan-600">กำหนดผังบัญชี</span></h1>
       <form  cForm >
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mb-3">
           <div class="col">
