--- a/src/app/views/defaultdata/assetcategory/assetcategory.component.html
+++ b/src/app/views/defaultdata/assetcategory/assetcategory.component.html
@@ -1,91 +1,151 @@
 <!-- defaultdata.component.html -->
-<c-card class="mb-4 shadow-sm" >
-  <c-card-header>
-      <strong>กำหนดหมวดสินทรัพย์</strong>
-  </c-card-header>
-    <c-card-body>
-      <form  cForm (ngSubmit)="onSubmit()">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 mb-3 ">
-          <div class="col">
-              <label cLabel for="assetCodeInput">รหัสหมวดสินทรัพย์</label>
-              <input cFormControl
-                  id="assetCodeInput"
-                  placeholder="ระบุรหัสหมวดสินทรัพย์"
-                  class="form-control"
-                  type="text"
-                  name="asc_name"
-                  [(ngModel)]="asset.asc_Code" 
-                  required
-              />
-          </div>
-          <div class="col">
-              <label cLabel for="assetNameInput">ชื่อหมวดสินทรัพย์</label>
-              <input cFormControl
-                  id="assetNameInput"
-                  placeholder="ระบุชื่อหมวดสินทรัพย์"
-                  class="form-control"
-                  type="text"
-                  name="asc_name"
-                  [(ngModel)]="asset.asc_name "
-                  required
-              />
-          </div>
-          <div class="col">
-              <label cLabel for="assetNameInput">รหัสประเภทสินทรัพย์</label>
-              <input cFormControl
-                  id="assetNameInput"
-                  placeholder="ระบุรหัสประเภทสินทรัพย์"
-                  class="form-control"
-                  type="text"
-                  name="AssetCode"
-                  [(ngModel)]="asset.AssetCode" 
-                  required
-              />
-          </div>
-          <div class="col align-self-end">
-              <button class="btn btn-primary">เพิ่ม</button>
-          </div>
+<c-card class="mb-4 shadow" style="border: none">
+  <c-card-body>
+    <h1><span class="anuphan-700">กำหนดหมวดหมู่ครุภัณท์</span></h1>
+    <hr />
+
+    <form cForm (ngSubmit)="onSubmit()">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 mb-3">
+        <div class="col">
+          <label cLabel for="assetCodeInput">รหัสหมวดหมู่ครุภัณท์</label>
+          <input
+            cFormControl
+            id="assetCodeInput"
+            placeholder="ระบุรหัสหมวดสินทรัพย์"
+            class="form-control"
+            type="text"
+            name="asc_name"
+            [(ngModel)]="asset.asc_Code"
+            required
+          />
+        </div>
+        <div class="col">
+          <label cLabel for="assetNameInput">ชื่อหมวดหมู่ครุภัณท์</label>
+          <input
+            cFormControl
+            id="assetNameInput"
+            placeholder="ระบุชื่อหมวดสินทรัพย์"
+            class="form-control"
+            type="text"
+            name="asc_name"
+            [(ngModel)]="asset.asc_name"
+            required
+          />
+        </div>
+        <div class="col">
+          <label cLabel for="assetNameInput">รหัสประเภทครุภัณท์</label>
+          <input
+            cFormControl
+            id="assetNameInput"
+            placeholder="ระบุรหัสประเภทสินทรัพย์"
+            class="form-control"
+            type="text"
+            name="AssetCode"
+            [(ngModel)]="asset.AssetCode"
+            required
+          />
+        </div>
+        <div class="col align-self-end">
+          <button class="btn btn-primary">เพิ่ม</button>
+        </div>
       </div>
-      
-        </form> <br/>
+    </form>
+    <br />
 
-        <div class="table-responsive">
-          <table  mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover ">
-            <!-- Actions Column -->
-            <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef style="font-weight: bold;">#</th>
-              <td mat-cell *matCellDef="let asset">
+    <div class="table-responsive">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        matSort
+        class="table table-striped table-hover"
+      >
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            class="anuphan-600"
+            style="font-weight: bold"
+          >
+            #
+          </th>
+          <td mat-cell class="border anuphan-600" *matCellDef="let asset">
+            <button
+              class="btn btn-sm btn-warning m-1"
+              (click)="editAsset(asset)"
+              style="width: 28px; height: 28px; padding: 4px"
+            >
+              <svg
+                [cIcon]="icons.cilPencil"
+                style="color: white; width: 100%; height: 100%"
+              ></svg>
+            </button>
 
-                <button class="btn btn-sm btn-warning m-1" 
-                            (click)="editAsset(asset)" style="width: 28px;height: 28px; padding: 4px;">
-                            <svg [cIcon]="icons.cilPencil" style="color: white; width: 100%; height: 100%;"></svg>
-                </button>
+            <button
+              class="btn btn-sm btn-danger m-1"
+              (click)="deleteAsset(asset)"
+              style="width: 28px; height: 28px; padding: 4px"
+            >
+              <svg
+                [cIcon]="icons.cilTrash"
+                style="color: white; width: 100%; height: 100%"
+              ></svg>
+            </button>
+          </td>
+        </ng-container>
 
-                <button class="btn btn-sm btn-danger m-1" 
-                            (click)="deleteAsset(asset)" style="width: 28px;height: 28px; padding: 4px;">
-                            <svg [cIcon]="icons.cilTrash" style="color: white; width: 100%; height: 100%;"></svg>
-                </button>
-              </td>
-            </ng-container>
-          
-            <!-- Dynamic Columns -->
-            <ng-container *ngFor="let column of displayedColumns2" [matColumnDef]="column">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bold;">{{ column }}</th>
-              <td mat-cell *matCellDef="let asset">{{ asset[column] }}</td>
-            </ng-container>
-          
-            <!-- Header Row -->
-            <tr mat-header-row *matHeaderRowDef="['actions', 'รหัสหมวดสินทรัพย์', 'ชื่อหมวดสินทรัพย์' ,'รหัสประเภทสินทรัพย์']"></tr>
-        
-            <!-- Data Rows -->
-            <tr mat-row *matRowDef="let row; columns: ['actions', 'รหัสหมวดสินทรัพย์', 'ชื่อหมวดสินทรัพย์' ,'รหัสประเภทสินทรัพย์'];"></tr>
-          </table>
-          
-          <!-- Paginator -->
-          <mat-paginator [pageSizeOptions]="[ 30, 50, 70, 100 ]" [pageSize]="15" showFirstLastButtons></mat-paginator>
-          </div>
-        
-        
-    </c-card-body>
-  </c-card>
-  
+        <!-- Dynamic Columns -->
+        <ng-container
+          *ngFor="let column of displayedColumns2"
+          [matColumnDef]="column"
+        >
+          <th
+            mat-header-cell
+            class="border anuphan-600"
+            *matHeaderCellDef
+            mat-sort-header
+          >
+            {{ column }}
+          </th>
+          <td mat-cell class="border anuphan-600" *matCellDef="let asset">
+            {{ asset[column] }}
+          </td>
+        </ng-container>
+
+        <!-- Header Row -->
+        <tr
+          mat-header-row
+          class="border anuphan-600"
+          *matHeaderRowDef="[
+            'actions',
+            'รหัสหมวดสินทรัพย์',
+            'ชื่อหมวดสินทรัพย์',
+            'รหัสประเภทสินทรัพย์'
+          ]"
+        ></tr>
+
+        <!-- Data Rows -->
+        <tr
+          mat-row
+          class="border anuphan-600"
+          *matRowDef="
+            let row;
+            columns: [
+              'actions',
+              'รหัสหมวดสินทรัพย์',
+              'ชื่อหมวดสินทรัพย์',
+              'รหัสประเภทสินทรัพย์'
+            ]
+          "
+        ></tr>
+      </table>
+
+      <!-- Paginator -->
+      <mat-paginator
+        [pageSizeOptions]="[30, 50, 70, 100]"
+        [pageSize]="15"
+        showFirstLastButtons
+      ></mat-paginator>
+    </div>
+  </c-card-body>
+</c-card>
