--- a/src/app/views/dashboard/tablewiget2/tablewiget2.component.html
+++ b/src/app/views/dashboard/tablewiget2/tablewiget2.component.html
@@ -1,44 +1,77 @@
-<c-card class="shadow" style="border: none;">
-    <!-- <c-card-header>
+<c-card class="shadow" style="border: none">
+  <!-- <c-card-header>
         <div style="display: flex; justify-content: space-between; align-items: center;">
             <strong style="margin-right: auto;">สถานที่ครอบครองทรัพย์สินกี่จำนวน</strong>
           </div>
         </c-card-header> -->
-    <c-card-body>
-        <h3 class="border-bottom"><span class="anuphan-700"style="color: green;">สถานที่ครอบครองทรัพย์สินกี่จำนวน</span></h3>
-            <div class="table-responsive">
-                <table class="table table-striped table-hover " style="font-size: 12px; width: max-content;"
-                     mat-table [dataSource]="dataSource2" matSort>
+  <c-card-body>
+    <h3 class="border-bottom">
+      <span class="anuphan-700" style="color: green"
+        >สำนักมีครุภัฑณ์จำนวน</span
+      >
+    </h3>
+    <div class="table-responsive">
+      <table
+        class="table table-striped table-hover"
+        style="font-size: 12px; width: max-content"
+        mat-table
+        [dataSource]="dataSource"
+        matSort
+      >
+        <ng-container matColumnDef="location">
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            class="anuphan-600"
+            style="font-weight: bold; "
+          >
+            ผู้ใช้งาน / ที่อยู่
+          </th>
+          <td
+            class="anuphan-400"
+            mat-cell
+            *matCellDef="let element"
+           
+          >
+            {{ element.location }}
+          </td>
+        </ng-container>
 
-                     <ng-container matColumnDef="location">
-                        <th mat-header-cell *matHeaderCellDef class="anuphan-600" 
-                            style="font-weight: bold;font-size: 13px;"> สถานที่ </th>
-                        <td class="anuphan-400" mat-cell *matCellDef="let element" style="font-size: 12.5px;"> 
-                            {{ element.location }} 
-                        </td>
-                      </ng-container>
-                      
-                      <ng-container matColumnDef="assetCount">
-                        <th class="anuphan-600" mat-header-cell *matHeaderCellDef 
-                            style="font-weight: bold;font-size: 13px;">จำนวนสินทรัพย์</th>
-                        <td class="anuphan-400" mat-cell *matCellDef="let element" style="font-size: 12.5px;"> 
-                            {{ element.assetCount }} 
-                        </td>
-                      </ng-container>
-                    
-                      <!-- Table rows -->
-                      <tr mat-header-row *matHeaderRowDef="displayedColumns3"></tr>
-                      <tr mat-row *matRowDef="let row; columns: displayedColumns3;"></tr>
-                </table>
+        <ng-container matColumnDef="assetCount">
+          <th
+            class="anuphan-600"
+            mat-header-cell
+            *matHeaderCellDef
+            style="font-weight: bold; "
+          >
+            จำนวนครุภัณฑ์
+          </th>
+          <td
+            class="anuphan-400"
+            mat-cell
+            *matCellDef="let element"
             
-                <!-- Paginator -->
-                <mat-paginator
-                    [length]="dataSource2.data.length" 
-                    [pageSizeOptions]="[5,10, 50, 100]"
-                    showFirstLastButtons  
-                    aria-label="Select page"  
-                    class="paginator-style">
-                </mat-paginator>
-            </div>
-     </c-card-body>
-  </c-card>
+          >
+            {{ element.assetCount }}
+          </td>
+        </ng-container>
+
+        <!-- Table rows -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns3; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns3"></tr>
+
+      </table>
+
+      <!-- Paginator -->
+      <mat-paginator
+        [length]="dataSource.data.length"
+        [pageSize]="5"
+        [pageSizeOptions]="[5, 10, 50, 100]"
+        showFirstLastButtons
+        aria-label="Select page"
+        class="paginator-style"
+      >
+      </mat-paginator>
+    </div>
+  </c-card-body>
+</c-card>
