--- a/src/app/views/defaultdata/assettypecode/defaultdata.component.html
+++ b/src/app/views/defaultdata/assettypecode/defaultdata.component.html
@@ -1,95 +1,141 @@
 <!-- defaultdata.component.html -->
+<c-card class="mb-4 shadow" style="border: none">
+  <!-- <c-card-header>
+      <span>กำหนดรหัสประเภทสินทรัพย์</span>
+  </c-card-header> -->
+  <c-card-body>
+    <h1><span class="anuphan-700">กำหนดรหัสประเภทครุภัณท์</span></h1>
+    <hr />
+    <div class="mb-3">
+      <div>
+        <br />
 
-<c-card class="mb-4 shadow-sm" >
-  <c-card-header>
-      <strong>กำหนดรหัสประเภทสินทรัพย์</strong>
-  </c-card-header>
-    <c-card-body>
-      <div class="mb-3">
-        <div >
-          <br/>
-          <form  (ngSubmit)="onSubmit()">
-
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mb-3">
-
-              <div class="col">
-                <label cLabel  for="assetCodeInput">รหัสสินทรัพย์</label >
-                <input cFormControl 
-                name="assetCode" 
-                id="assetCodeInput" 
-                [(ngModel)]="asset.assetCode" 
-                placeholder="ระบุรหัสสินทรัพย์" 
-                class="form-control" type="text">
-              </div>
-        
-              <div class="col">
-                <label cLabel  for="assetNameInput">ชื่อประเภทสินทรัพย์</label >
-                <input cFormControl 
-                name="assetName" 
-                id="assetNameInput" 
-                [(ngModel)]="asset.assetName" 
-                placeholder="ระบุประเภทสินทรัพย์" 
-                class="form-control" type="text">
-              </div>
-          
-              <div class="col align-self-end">
-                <button type="submit" class="btn btn-primary">เพิ่ม</button>
-              </div>
-
+        <form (ngSubmit)="onSubmit()">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mb-3">
+            <div class="col">
+              <label cLabel for="assetCodeInput">รหัสประเภทครุภัณท์</label>
+              <input
+                cFormControl
+                name="assetCode"
+                id="assetCodeInput"
+                [(ngModel)]="asset.assetCode"
+                placeholder="ระบุรหัสสินทรัพย์"
+                class="form-control"
+                type="text"
+                required
+              />
             </div>
-          </form>
-          <br/>
-        
-        </div>
-        <div >
-          <div class="table-responsive">
-          <table  mat-table [dataSource]="dataSource" matSort class="table table-striped table-hover ">
+
+            <div class="col">
+              <label cLabel for="assetNameInput">ชื่อประเภทครุภัณท์</label>
+              <input
+                cFormControl
+                name="assetName"
+                id="assetNameInput"
+                [(ngModel)]="asset.assetName"
+                placeholder="ระบุประเภทสินทรัพย์"
+                class="form-control"
+                type="text"
+                required
+              />
+            </div>
+
+            <div class="col align-self-end">
+              <button type="submit" class="btn btn-primary">เพิ่ม</button>
+            </div>
+          </div>
+        </form>
+        <br />
+      </div>
+      <div>
+        <div class="table-responsive">
+          <table
+            mat-table
+            [dataSource]="dataSource"
+            matSort
+            class="table table-striped table-hover anuphan-600"
+          >
             <!-- Actions Column -->
             <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef style="font-weight: bold;">#</th>
-              <td mat-cell *matCellDef="let asset">
-
-                <button class="btn btn-sm btn-warning m-1" 
-                            (click)="editAsset(asset)" 
-                            style="width: 28px;height: 28px; padding: 4px;">
-                            <svg [cIcon]="icons.cilPencil" 
-                            style="color: white; width: 100%; height: 100%;"></svg>
+              <th mat-header-cell class="border" *matHeaderCellDef style="font-weight: bold">
+                #
+              </th>
+              <td mat-cell class="border" *matCellDef="let asset">
+                <button
+                  class="btn btn-sm btn-warning m-1"
+                  (click)="editAsset(asset)"
+                  style="width: 28px; height: 28px; padding: 4px"
+                >
+                  <svg
+                    [cIcon]="icons.cilPencil"
+                    style="color: white; width: 100%; height: 100%"
+                  ></svg>
                 </button>
 
-                <button class="btn btn-sm btn-danger m-1" 
-                            (click)="deleteAsset(asset)" 
-                            style="width: 28px;height: 28px; padding: 4px;">
-                            <svg [cIcon]="icons.cilTrash" 
-                            style="color: white; width: 100%; height: 100%;"></svg>
+                <button
+                  class="btn btn-sm btn-danger m-1"
+                  (click)="deleteAsset(asset)"
+                  style="width: 28px; height: 28px; padding: 4px"
+                >
+                  <svg
+                    [cIcon]="icons.cilTrash"
+                    style="color: white; width: 100%; height: 100%"
+                  ></svg>
                 </button>
               </td>
             </ng-container>
-          
+
             <!-- Dynamic Columns -->
-            <ng-container *ngFor="let column of displayedColumns2" [matColumnDef]="column">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bold;">{{ column }}</th>
-              <td mat-cell *matCellDef="let asset">{{ asset[column] }}</td>
+            <ng-container
+              *ngFor="let column of displayedColumns2"
+              [matColumnDef]="column"
+            >
+              <th
+                mat-header-cell
+                class="anuphan-600 border"
+                *matHeaderCellDef
+                mat-sort-header
+                style="font-weight: bold ;color: green;font-size: medium;"
+              >
+                {{ column }}
+              </th>
+              <td mat-cell class="anuphan-600 border" *matCellDef="let asset">
+                {{ asset[column] }}
+              </td>
             </ng-container>
-          
+
             <!-- Header Row -->
-            <!-- Header Row -->
-            <tr mat-header-row *matHeaderRowDef="['actions', 'รหัสประเภทสินทรัพย์', 'ชื่อประเภทสินทรัพย์']"></tr>
-        
+            <tr
+              mat-header-row
+              *matHeaderRowDef="[
+                'actions',
+                'รหัสประเภทสินทรัพย์',
+                'ชื่อประเภทสินทรัพย์'
+              ]"
+            ></tr>
+
             <!-- Data Rows -->
-            <tr mat-row *matRowDef="let row; columns: ['actions', 'รหัสประเภทสินทรัพย์', 'ชื่อประเภทสินทรัพย์'];"></tr>
+            <tr
+              mat-row
+              *matRowDef="
+                let row;
+                columns: [
+                  'actions',
+                  'รหัสประเภทสินทรัพย์',
+                  'ชื่อประเภทสินทรัพย์'
+                ]
+              "
+            ></tr>
           </table>
-          
+
           <!-- Paginator -->
-          <mat-paginator [pageSizeOptions]="[ 30, 50, 70, 100 ]" [pageSize]="15" showFirstLastButtons></mat-paginator>
-          </div>
+          <mat-paginator
+            [pageSizeOptions]="[30, 50, 70, 100]"
+            [pageSize]="15"
+            showFirstLastButtons
+          ></mat-paginator>
         </div>
-
       </div>
-      
-
-        
-        
-        
-    </c-card-body>
-  </c-card>
-  
+    </div>
+  </c-card-body>
+</c-card>
