--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -80,16 +80,15 @@
     </c-header-nav>
   </c-container>
 
-  <!-- <c-container  [fluid]="true" class="m-0 shadow-sm " style="border: none; background-color: transparent;">
+  <!-- <c-container  [fluid]="true" class="" style="border: none; ">
     <c-breadcrumb-router  />
-    <div >
-      <button class="btn btn btn-secondary m-1">เพิ่ม</button>
-      <button class="btn btn btn-secondary m-1">รายการ</button>
-      <button class="btn btn-secondary m-1">ตรวจนับ</button>
-      <button class="btn btn-secondary m-1">ซ่อมแซม</button>
-      <button class="btn btn-secondary m-1">โอนย้าย</button>
-      <button class="btn btn-secondary m-1">ขาย</button>
-    </div>
+    <c-header-nav >
+      <div class="card">
+        <div class="card-body">
+ss
+        </div>
+      </div>
+    </c-header-nav>
     
   </c-container> -->
 </ng-container>
