--- a/src/app/views/dashboard/tablewiget2/tablewiget2.component.html
+++ b/src/app/views/dashboard/tablewiget2/tablewiget2.component.html
@@ -7,7 +7,7 @@
   <c-card-body>
     <h3 class="border-bottom">
       <span class="anuphan-700" style="color: green"
-        >สำนักมีครุภัฑณ์จำนวน</span
+        >สำนักมีครุภัณฑ์จำนวน</span
       >
     </h3>
     <div class="table-responsive">
