--- a/src/app/views/defaultdata/property-seller/property-seller.component.html
+++ b/src/app/views/defaultdata/property-seller/property-seller.component.html
@@ -1,8 +1,9 @@
 <c-card class="mb-4 shadow-sm">
-  <c-card-header>
+  <!-- <c-card-header>
     <strong>กำหนดรหัสประเภทสินทรัพย์</strong>
-  </c-card-header>
+  </c-card-header> -->
   <c-card-body>
+    <h1><span class="anuphan-700">กำหนดรหัสประเภทสินทรัพย์</span></h1>
 
     <form cForm (submit)="onSubmit()">
 
