--- a/src/app/views/defaultdata/sectiontype/sectiontype.component.html
+++ b/src/app/views/defaultdata/sectiontype/sectiontype.component.html
@@ -1,10 +1,13 @@
 <!-- defaultdata.component.html -->
 
 <c-card class="mb-4 shadow-sm" >
-  <c-card-header>
+  <!-- <c-card-header>
       <strong>กำหนดรหัสส่วนงาน</strong>
-  </c-card-header>
+  </c-card-header> -->
     <c-card-body>
+
+      <h1><span class="anuphan-700">กำหนดรหัสส่วนงาน</span></h1>
+
       <form  cForm >
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mb-3">
           <div class="col">
