--- a/src/app/views/system/asset-detail1/system.component.html
+++ b/src/app/views/system/asset-detail1/system.component.html
@@ -172,6 +172,7 @@
                   style="font-family: 'Anuphan', sans-serif; font-weight: 400"
                   required
                   disabled="true"
+                  (click)=" showAlert()"
                 >
                 </mat-select>
               </div>
