--- a/src/app/views/system/infoasset/infoasset.component.html
+++ b/src/app/views/system/infoasset/infoasset.component.html
@@ -1,17 +1,6 @@
 <c-card class="mb-4 shadow" style="border: none">
-  <!-- <c-card-header>
-        <div style="display: flex; justify-content: space-between; align-items: center;">
-            <span style="margin-right: auto;">เพิ่มรายละเอียดครุภัฑณ์</span>
-        </div>
-    </c-card-header> -->
-  <!-- purchasePrice: number;
-  purchasedFrom: string;
-  documentNumber: string;
-  department: string;
-  responsibleEmployee: string;
-  Note: string; -->
   <c-card-body>
-    <h1><span class="anuphan-700">รายละเอียดครุภัฑณ์</span></h1>
+    <h1><span class="anuphan-700">รายละเอียดครุภัณฑ์</span></h1>
     <hr />
 
     <div class="row">
