--- a/src/app/views/system2/repair/repair.component.html
+++ b/src/app/views/system2/repair/repair.component.html
@@ -1,7 +1,7 @@
 <c-card class="mb-4 shadow" style="border: none;">
     
     <c-card-body>
-      <h1><span class="anuphan-700">บันทึกการซ่อมแซมและบำรุงรักษา</span></h1><hr/>
+      <h1><span class="anuphan-700">รายการบันทึกการซ่อมแซมและบำรุงรักษา</span></h1><hr/>
   
       <form cForm (submit)="onSubmit()">
             <div class="row mb-3">
